Project5/parse.output
Terminals unused in grammar

   FLOAT


Grammar

    0 $accept: start $end

    1 start: start funcdef
    2      | %empty

    3 funcdef: DEF IDENT LPAREN parm_list RPAREN COLON stmt END
    4        | CR

    5 parm_list: expr COMMA parm_list
    6          | expr
    7          | %empty

    8 stmt: line stmt
    9     | selection stmt
   10     | CR stmt
   11     | %empty

   12 selection: IF expr COLON stmt END
   13          | IF expr COLON stmt ELSE COLON stmt END

   14 line: IDENT ASSIGN expr
   15     | IDENT LPAREN parm_list RPAREN
   16     | PRINT expr
   17     | RETURN expr

   18 expr: expr PLUS expr
   19     | expr MINUS expr
   20     | expr MULT expr
   21     | expr EXPON expr
   22     | expr DIV expr
   23     | expr MOD expr
   24     | expr LESS expr
   25     | expr LESSEQ expr
   26     | expr GREAT expr
   27     | expr GREATEQ expr
   28     | expr NOTEQ expr
   29     | expr EQ expr
   30     | MINUS expr
   31     | NUMBER
   32     | IDENT
   33     | LPAREN expr RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
CR (258) 4 10
ASSIGN (259) 14
PRINT (260) 16
IDENT (261) 3 14 15 32
NUMBER (262) 31
FLOAT (263)
LPAREN (264) 3 15 33
RPAREN (265) 3 15 33
DEF (266) 3
COLON (267) 3 12 13
COMMA (268) 5
IF (269) 12 13
END (270) 3 12 13
ELSE (271) 13
RETURN (272) 17
EXPON (273) 21
LESS (274) 24
LESSEQ (275) 25
GREAT (276) 26
GREATEQ (277) 27
EQ (278) 29
NOTEQ (279) 28
PLUS (280) 18
MINUS (281) 19 30
MULT (282) 20
DIV (283) 22
MOD (284) 23
less_than_else (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
start (32)
    on left: 1 2, on right: 0 1
funcdef (33)
    on left: 3 4, on right: 1
parm_list (34)
    on left: 5 6 7, on right: 3 5 15
stmt (35)
    on left: 8 9 10 11, on right: 3 8 9 10 12 13
selection (36)
    on left: 12 13, on right: 9
line (37)
    on left: 14 15 16 17, on right: 8
expr (38)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33, on right:
    5 6 12 13 14 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 33


State 0

    0 $accept: . start $end

    $default  reduce using rule 2 (start)

    start  go to state 1


State 1

    0 $accept: start . $end
    1 start: start . funcdef

    $end  shift, and go to state 2
    CR    shift, and go to state 3
    DEF   shift, and go to state 4

    funcdef  go to state 5


State 2

    0 $accept: start $end .

    $default  accept


State 3

    4 funcdef: CR .

    $default  reduce using rule 4 (funcdef)


State 4

    3 funcdef: DEF . IDENT LPAREN parm_list RPAREN COLON stmt END

    IDENT  shift, and go to state 6


State 5

    1 start: start funcdef .

    $default  reduce using rule 1 (start)


State 6

    3 funcdef: DEF IDENT . LPAREN parm_list RPAREN COLON stmt END

    LPAREN  shift, and go to state 7


State 7

    3 funcdef: DEF IDENT LPAREN . parm_list RPAREN COLON stmt END

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    $default  reduce using rule 7 (parm_list)

    parm_list  go to state 12
    expr       go to state 13


State 8

   32 expr: IDENT .

    $default  reduce using rule 32 (expr)


State 9

   31 expr: NUMBER .

    $default  reduce using rule 31 (expr)


State 10

   33 expr: LPAREN . expr RPAREN

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 14


State 11

   30 expr: MINUS . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 15


State 12

    3 funcdef: DEF IDENT LPAREN parm_list . RPAREN COLON stmt END

    RPAREN  shift, and go to state 16


State 13

    5 parm_list: expr . COMMA parm_list
    6          | expr .
   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    COMMA    shift, and go to state 17
    EXPON    shift, and go to state 18
    LESS     shift, and go to state 19
    LESSEQ   shift, and go to state 20
    GREAT    shift, and go to state 21
    GREATEQ  shift, and go to state 22
    EQ       shift, and go to state 23
    NOTEQ    shift, and go to state 24
    PLUS     shift, and go to state 25
    MINUS    shift, and go to state 26
    MULT     shift, and go to state 27
    DIV      shift, and go to state 28
    MOD      shift, and go to state 29

    $default  reduce using rule 6 (parm_list)


State 14

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr
   33     | LPAREN expr . RPAREN

    RPAREN   shift, and go to state 30
    EXPON    shift, and go to state 18
    LESS     shift, and go to state 19
    LESSEQ   shift, and go to state 20
    GREAT    shift, and go to state 21
    GREATEQ  shift, and go to state 22
    EQ       shift, and go to state 23
    NOTEQ    shift, and go to state 24
    PLUS     shift, and go to state 25
    MINUS    shift, and go to state 26
    MULT     shift, and go to state 27
    DIV      shift, and go to state 28
    MOD      shift, and go to state 29


State 15

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr
   30     | MINUS expr .

    EXPON  shift, and go to state 18
    MULT   shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 30 (expr)


State 16

    3 funcdef: DEF IDENT LPAREN parm_list RPAREN . COLON stmt END

    COLON  shift, and go to state 31


State 17

    5 parm_list: expr COMMA . parm_list

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    $default  reduce using rule 7 (parm_list)

    parm_list  go to state 32
    expr       go to state 13


State 18

   21 expr: expr EXPON . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 33


State 19

   24 expr: expr LESS . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 34


State 20

   25 expr: expr LESSEQ . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 35


State 21

   26 expr: expr GREAT . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 36


State 22

   27 expr: expr GREATEQ . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 37


State 23

   29 expr: expr EQ . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 38


State 24

   28 expr: expr NOTEQ . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 39


State 25

   18 expr: expr PLUS . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 40


State 26

   19 expr: expr MINUS . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 41


State 27

   20 expr: expr MULT . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 42


State 28

   22 expr: expr DIV . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 43


State 29

   23 expr: expr MOD . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 44


State 30

   33 expr: LPAREN expr RPAREN .

    $default  reduce using rule 33 (expr)


State 31

    3 funcdef: DEF IDENT LPAREN parm_list RPAREN COLON . stmt END

    CR      shift, and go to state 45
    PRINT   shift, and go to state 46
    IDENT   shift, and go to state 47
    IF      shift, and go to state 48
    RETURN  shift, and go to state 49

    $default  reduce using rule 11 (stmt)

    stmt       go to state 50
    selection  go to state 51
    line       go to state 52


State 32

    5 parm_list: expr COMMA parm_list .

    $default  reduce using rule 5 (parm_list)


State 33

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   21     | expr EXPON expr .
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18

    $default  reduce using rule 21 (expr)


State 34

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   24     | expr LESS expr .
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18
    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MULT   shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 24 (expr)


State 35

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   25     | expr LESSEQ expr .
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18
    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MULT   shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 25 (expr)


State 36

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   26     | expr GREAT expr .
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18
    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MULT   shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 26 (expr)


State 37

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   27     | expr GREATEQ expr .
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18
    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MULT   shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 27 (expr)


State 38

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr
   29     | expr EQ expr .

    EXPON  shift, and go to state 18
    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MULT   shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 29 (expr)


State 39

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   28     | expr NOTEQ expr .
   29     | expr . EQ expr

    EXPON  shift, and go to state 18
    PLUS   shift, and go to state 25
    MINUS  shift, and go to state 26
    MULT   shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 28 (expr)


State 40

   18 expr: expr . PLUS expr
   18     | expr PLUS expr .
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18
    MULT   shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 18 (expr)


State 41

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   19     | expr MINUS expr .
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18
    MULT   shift, and go to state 27
    DIV    shift, and go to state 28
    MOD    shift, and go to state 29

    $default  reduce using rule 19 (expr)


State 42

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   20     | expr MULT expr .
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18

    $default  reduce using rule 20 (expr)


State 43

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   22     | expr DIV expr .
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18

    $default  reduce using rule 22 (expr)


State 44

   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   23     | expr MOD expr .
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON  shift, and go to state 18

    $default  reduce using rule 23 (expr)


State 45

   10 stmt: CR . stmt

    CR      shift, and go to state 45
    PRINT   shift, and go to state 46
    IDENT   shift, and go to state 47
    IF      shift, and go to state 48
    RETURN  shift, and go to state 49

    $default  reduce using rule 11 (stmt)

    stmt       go to state 53
    selection  go to state 51
    line       go to state 52


State 46

   16 line: PRINT . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 54


State 47

   14 line: IDENT . ASSIGN expr
   15     | IDENT . LPAREN parm_list RPAREN

    ASSIGN  shift, and go to state 55
    LPAREN  shift, and go to state 56


State 48

   12 selection: IF . expr COLON stmt END
   13          | IF . expr COLON stmt ELSE COLON stmt END

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 57


State 49

   17 line: RETURN . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 58


State 50

    3 funcdef: DEF IDENT LPAREN parm_list RPAREN COLON stmt . END

    END  shift, and go to state 59


State 51

    9 stmt: selection . stmt

    CR      shift, and go to state 45
    PRINT   shift, and go to state 46
    IDENT   shift, and go to state 47
    IF      shift, and go to state 48
    RETURN  shift, and go to state 49

    $default  reduce using rule 11 (stmt)

    stmt       go to state 60
    selection  go to state 51
    line       go to state 52


State 52

    8 stmt: line . stmt

    CR      shift, and go to state 45
    PRINT   shift, and go to state 46
    IDENT   shift, and go to state 47
    IF      shift, and go to state 48
    RETURN  shift, and go to state 49

    $default  reduce using rule 11 (stmt)

    stmt       go to state 61
    selection  go to state 51
    line       go to state 52


State 53

   10 stmt: CR stmt .

    $default  reduce using rule 10 (stmt)


State 54

   16 line: PRINT expr .
   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON    shift, and go to state 18
    LESS     shift, and go to state 19
    LESSEQ   shift, and go to state 20
    GREAT    shift, and go to state 21
    GREATEQ  shift, and go to state 22
    EQ       shift, and go to state 23
    NOTEQ    shift, and go to state 24
    PLUS     shift, and go to state 25
    MINUS    shift, and go to state 26
    MULT     shift, and go to state 27
    DIV      shift, and go to state 28
    MOD      shift, and go to state 29

    $default  reduce using rule 16 (line)


State 55

   14 line: IDENT ASSIGN . expr

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    expr  go to state 62


State 56

   15 line: IDENT LPAREN . parm_list RPAREN

    IDENT   shift, and go to state 8
    NUMBER  shift, and go to state 9
    LPAREN  shift, and go to state 10
    MINUS   shift, and go to state 11

    $default  reduce using rule 7 (parm_list)

    parm_list  go to state 63
    expr       go to state 13


State 57

   12 selection: IF expr . COLON stmt END
   13          | IF expr . COLON stmt ELSE COLON stmt END
   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    COLON    shift, and go to state 64
    EXPON    shift, and go to state 18
    LESS     shift, and go to state 19
    LESSEQ   shift, and go to state 20
    GREAT    shift, and go to state 21
    GREATEQ  shift, and go to state 22
    EQ       shift, and go to state 23
    NOTEQ    shift, and go to state 24
    PLUS     shift, and go to state 25
    MINUS    shift, and go to state 26
    MULT     shift, and go to state 27
    DIV      shift, and go to state 28
    MOD      shift, and go to state 29


State 58

   17 line: RETURN expr .
   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON    shift, and go to state 18
    LESS     shift, and go to state 19
    LESSEQ   shift, and go to state 20
    GREAT    shift, and go to state 21
    GREATEQ  shift, and go to state 22
    EQ       shift, and go to state 23
    NOTEQ    shift, and go to state 24
    PLUS     shift, and go to state 25
    MINUS    shift, and go to state 26
    MULT     shift, and go to state 27
    DIV      shift, and go to state 28
    MOD      shift, and go to state 29

    $default  reduce using rule 17 (line)


State 59

    3 funcdef: DEF IDENT LPAREN parm_list RPAREN COLON stmt END .

    $default  reduce using rule 3 (funcdef)


State 60

    9 stmt: selection stmt .

    $default  reduce using rule 9 (stmt)


State 61

    8 stmt: line stmt .

    $default  reduce using rule 8 (stmt)


State 62

   14 line: IDENT ASSIGN expr .
   18 expr: expr . PLUS expr
   19     | expr . MINUS expr
   20     | expr . MULT expr
   21     | expr . EXPON expr
   22     | expr . DIV expr
   23     | expr . MOD expr
   24     | expr . LESS expr
   25     | expr . LESSEQ expr
   26     | expr . GREAT expr
   27     | expr . GREATEQ expr
   28     | expr . NOTEQ expr
   29     | expr . EQ expr

    EXPON    shift, and go to state 18
    LESS     shift, and go to state 19
    LESSEQ   shift, and go to state 20
    GREAT    shift, and go to state 21
    GREATEQ  shift, and go to state 22
    EQ       shift, and go to state 23
    NOTEQ    shift, and go to state 24
    PLUS     shift, and go to state 25
    MINUS    shift, and go to state 26
    MULT     shift, and go to state 27
    DIV      shift, and go to state 28
    MOD      shift, and go to state 29

    $default  reduce using rule 14 (line)


State 63

   15 line: IDENT LPAREN parm_list . RPAREN

    RPAREN  shift, and go to state 65


State 64

   12 selection: IF expr COLON . stmt END
   13          | IF expr COLON . stmt ELSE COLON stmt END

    CR      shift, and go to state 45
    PRINT   shift, and go to state 46
    IDENT   shift, and go to state 47
    IF      shift, and go to state 48
    RETURN  shift, and go to state 49

    $default  reduce using rule 11 (stmt)

    stmt       go to state 66
    selection  go to state 51
    line       go to state 52


State 65

   15 line: IDENT LPAREN parm_list RPAREN .

    $default  reduce using rule 15 (line)


State 66

   12 selection: IF expr COLON stmt . END
   13          | IF expr COLON stmt . ELSE COLON stmt END

    END   shift, and go to state 67
    ELSE  shift, and go to state 68


State 67

   12 selection: IF expr COLON stmt END .

    $default  reduce using rule 12 (selection)


State 68

   13 selection: IF expr COLON stmt ELSE . COLON stmt END

    COLON  shift, and go to state 69


State 69

   13 selection: IF expr COLON stmt ELSE COLON . stmt END

    CR      shift, and go to state 45
    PRINT   shift, and go to state 46
    IDENT   shift, and go to state 47
    IF      shift, and go to state 48
    RETURN  shift, and go to state 49

    $default  reduce using rule 11 (stmt)

    stmt       go to state 70
    selection  go to state 51
    line       go to state 52


State 70

   13 selection: IF expr COLON stmt ELSE COLON stmt . END

    END  shift, and go to state 71


State 71

   13 selection: IF expr COLON stmt ELSE COLON stmt END .

    $default  reduce using rule 13 (selection)
